@@ -24,6 +24,10 @@ NOT RELEASED YET
 
   NEW FEATURES:
 
+    * ``bzr log -p`` displays the patch diff for each revision.
+      When logging a file, the diff only includes changes to that file.
+      (Ian Clatworthy, #202331, #227335)
+
   IMPROVEMENTS:
 
     * ``bzr init`` will now print a little less verbose output.
